--- a/styles/sass/components/_global.scss
+++ b/styles/sass/components/_global.scss
@@ -1,3 +1,4 @@
+//Various global styles.
 * {
     margin: 0;
     padding: 0;
@@ -9,14 +10,17 @@ html {
     scroll-behavior: smooth;
 }
 
+body p, ul, label, li {
+    font-family: $openSans;
+}
+
 body p, ul, label {
     font-size: .875rem;
-    font-family: $openSans;
     line-height: 24px;
     letter-spacing: 0.3px;
 }
 
-h3, h4, h5 {
+h2, h3, h4, h5 {
     font-family: $montserrat;
     letter-spacing: 1.8px;
     font-weight: normal;
