--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -1,30 +1,40 @@
+//Navigation parent container.
 .navigation {
     @include flexIt(row, space-between, center);
     text-transform: uppercase;
     font-family: $montserrat;
 
+    //Mobile hamburger nav.
     .fa-bars {
         font-size: 2rem;
         display: none;
+        
         @media (max-width: 900px) {
             display: block;
         }
     }
 
-    h1:hover {
-        transform: scale(1.1);
+    //Logo & main heading.
+    h1 {
         transition: all 0.3s ease-in-out;
+        
+        //Slight hover animation that scales heading. 
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 
+    //Nav lists are separated in two, this contains it. 
     &__container {
         width: 25%;
+
         @media (max-width: 900px) {
             display: none;
         }
     }
 
+    //<ul> elements for nav.
     &__list {
-        // background-color: green;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -32,19 +42,20 @@
         font-size: .9rem;
     }
 
+    //<a> tags for nav. 
     &__list .link {
         position: relative;
-    }
 
-    &__list .link:hover::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 1px;
-        background: $black;
-        bottom: -2px;
-        left: 0;
-        animation: grow 0.5s forwards;
+        &:hover::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            background: $black;
+            bottom: -2px;
+            left: 0;
+            animation: grow 0.5s forwards;
+        }
     }
 
     &__list .fa-shopping-bag {
@@ -52,6 +63,7 @@
         font-size: 1rem;
     }
 
+    //Little green notification for shopping bag.
     &__list .fa-shopping-bag::after {
         content: "2";
         font-family: $openSans;
@@ -67,20 +79,13 @@
         text-align: center;
     }
 
+    //Main logo/heading.
     &__logo {
         font-size: 2rem;
         font-weight: bold;
-        // background: chocolate;
     }
 }
 
-@keyframes grow {
-    from {
-        width: 0%;
-    } to {
-        width: 100%;
-    }
-}
 
 
 
