--- a/styles/sass/partials/_branding.scss
+++ b/styles/sass/partials/_branding.scss
@@ -1,22 +1,28 @@
+
+//Vertical line graphic for branding section.
+.branding::before {
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 150px;
+    background: $lightGrey;
+    top: -65px;
+    left: 50%;
+    z-index: 1;
+}
+
+//Branding section parent element.
 .branding {
     background: $lightSage;
     position: relative;
-
-    &__line {
-      position: absolute;
-      top: -80px;
-      left: 50%;
-      width: 1px;
-      height: 150px;
-      background: $lightGrey;
-    }
 
     &__image {
        width: 100%;
        max-width: 30%;
        margin: 0 auto;
        padding: 200px 0 50px 0;
-        @media(max-width: 1000px) {
+        
+       @media(max-width: 1000px) {
            max-width: 70%;
        }
 
@@ -30,10 +36,12 @@
             width: 50%;
             top: -120px;
             left: -120px;
+            
             img {
                 width: 100%;
                 max-width: 90%;
             }
+            
             @media(max-width: 1200px) {
                 top: -80px;
                 left: -70px;
@@ -47,46 +55,52 @@
 
         &--bottom {
             position: relative;
+            
             img {
                 width: 100%;
             }
         }
     }
 
-      
+    //THe text content for the branding page.  
     &__content {
-    display: flex;
-    // background-color: chocolate;
-    justify-content: center;
-    width: 100%;
-    padding-bottom: 100px;
-    @media(max-width: 1000px) {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    &--left, &--right {
-        font-family: $montserrat;
-        font-weight: normal;
-        text-align: center;
-        // background-color: cyan;
-        width: 25%;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        padding-bottom: 100px;
+    
         @media(max-width: 1000px) {
-            width: 100%;
-            margin: 20px 0;
+            flex-direction: column;
+            align-items: center;
         }
 
-        h2 {
-            text-transform: uppercase;
+        //Left and right content sections.
+        &--left, &--right {
+            font-family: $montserrat;
             font-weight: normal;
-            font-size: 1rem;
-            margin-bottom: 20px;
-        }
+            text-align: center;
+            width: 25%;
+        
+            @media(max-width: 1000px) {
+                width: 100%;
+                margin: 20px 0;
+            }
 
-        p {
-            font-size: .8rem;
-            line-height: 30px;
+            h2 {
+                text-transform: uppercase;
+                font-weight: normal;
+                font-size: 1rem;
+                margin-bottom: 20px;
+            }
+
+            p {
+                font-size: .8rem;
+                line-height: 30px;
+            }
         }
     }
 }
-}
+
+
+
+
