--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -1,9 +1,12 @@
+//Portfolio section and parent container. 
 .portfolio {
-    display: flex;
+    @include flexIt;
+    
     @media (max-width: 900px) {
             flex-direction: column;
     }
 
+    //Main image.
     &__image {
         width: 50%;
         @media (max-width: 900px) {
@@ -11,6 +14,7 @@
         }
     }
 
+    //Main content.
     &__content {
         background: $lightSage;
         display: flex;
@@ -19,6 +23,7 @@
         justify-content: center;
         padding: 200px;
         width: 50%;
+
         @media (max-width: 1700px) {
             padding: 100px;
         }
@@ -33,6 +38,7 @@
 
         h4 {
             text-transform: uppercase;
+            font-size: 1.5rem;
         }
 
         p {
@@ -42,11 +48,19 @@
         }
 
         button {
-            width: 200px;
-            height: 50px;
+            padding: 20px 40px;
             background: $white;
             border: none;
-            text-transform: upppercase;
+            font-weight: bold;
+            font-size: 1rem;
+            font-family: $montserrat;
+            text-transform: uppercase;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+                background: $black;
+                color: $white;
+            }
         }
     }
 }
