--- a/styles/sass/partials/_slider.scss
+++ b/styles/sass/partials/_slider.scss
@@ -1,3 +1,4 @@
+//Parent slider section. 
 #slider {
     background: $white;
     font-family: $openSans;
@@ -16,22 +17,32 @@
     }
 
     .wrapper {
-        // background: chocolate;
         padding: 100px 0;
     }
 }
 
+//Contains image and slider controls. 
 .slider__container {
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
     padding: 100px 0 50px 0;
 
+    @media (max-width: 720px) {
+        align-items: center;
+    }
+
+    @media (max-width: 400px) {
+        padding: 50px 0;        
+    }
+
     .fa-angle-left, .fa-angle-right {
         font-size: 2.5rem;
         margin-bottom: 50px;
+
         @media (max-width: 720px) {
             font-size: 2rem;
+            margin-bottom: 0;
         }
     }
 
@@ -41,6 +52,10 @@
 
     &--image {
         border-radius: 50%;
+
+        @media (max-width: 400px) {
+            width: 50%;
+        }
     }
 
     
