--- a/styles/sass/partials/_team.scss
+++ b/styles/sass/partials/_team.scss
@@ -1,36 +1,43 @@
+//Vertical line for team section.
+.team::before {
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 60px;
+    background: $lightGrey;
+    position: absolute;
+    top: 0;
+    left: 50%;
+}
+
+//Team section parent element.
 .team {
     background: $white;
     position: relative;
-
-    .line {
-        width: 1px;
-        height: 60px;
-        background: $lightGrey;
-        position: absolute;
-        top: 0;
-        left: 50%;
-        z-index: 3;
-    }
 
     h3 {
         text-transform: uppercase;
         text-align: center;
         padding-top: 100px;
+        
         @media (max-width: 900px) {
             padding-bottom: 50px;
         }
     }
 
+    //Container for grid of images. 
     &__container {
         display: grid;
         gap: 20px;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(2, 1fr);
         padding: 100px 0 200px 0;
+        
         @media (max-width: 1400px) {
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(3, 1fr);
         }
+        
         @media (max-width: 900px) {
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(4, 1fr);
@@ -39,97 +46,99 @@
 
         @media (max-width: 500px) {
             grid-template-rows: repeat(7, 1fr);
+            padding-bottom: 20px;
         }
 
         img {
             width: 100%;
-        }
 
-        img:nth-of-type(1) {
-            @media (max-width: 1400px) {
-                grid-column: 1 / 2;
-                grid-row: 2 / 2;   
-            }
+            &:nth-of-type(1) {
+                @media (max-width: 1400px) {
+                    grid-column: 1 / 2;
+                    grid-row: 2 / 2;   
+                }
             
-            @media (max-width: 900px) {
-                grid-column: 1 / 2;
-                grid-row: 2 / 4;
+                @media (max-width: 900px) {
+                    grid-column: 1 / 2;
+                    grid-row: 2 / 4;
+                }
+
+                @media (max-width: 500px) {
+                    grid-column: 1 / 3;
+                    grid-row: 2 / 7;
+                }
             }
 
-            @media (max-width: 500px) {
-                grid-column: 1 / 3;
-                grid-row: 2 / 7;
-            }
-        }
+            &:nth-of-type(2) {
+                @media (max-width: 1400px) {
+                    grid-column: 2 / 3;
+                    grid-row: 2 / 2;   
+                }
 
-        img:nth-of-type(2) {
-            @media (max-width: 1400px) {
-                grid-column: 2 / 3;
-                grid-row: 2 / 2;   
-            }
-            
-            @media (max-width: 900px) {
-                grid-column: 2 / 3;
-                grid-row: 2 / 4;
-            }
+                @media (max-width: 900px) {
+                    grid-column: 2 / 3;
+                    grid-row: 2 / 4;
+                }
 
-            @media (max-width: 500px) {
-                grid-column: 1 / 3;
-                grid-row: 3 / 7;
-            }
-        }
-
-        img:nth-of-type(3) {
-            @media (max-width: 1400px) {
-                grid-column: 3 / 4;
-                grid-row: 2 / 2;   
-            }
-            
-            @media (max-width: 900px) {
-                grid-column: 1 / 2;
-                grid-row: 3 / 4;
+                    @media (max-width: 500px) {
+                    grid-column: 1 / 3;
+                    grid-row: 3 / 7;
+                }
             }
 
-            @media (max-width: 500px) {
-                grid-column: 1 / 3;
-                grid-row: 4 / 7;
-            }
-        }
+            &:nth-of-type(3) {
+                @media (max-width: 1400px) {
+                    grid-column: 3 / 4;
+                    grid-row: 2 / 2;   
+                }
 
-        img:nth-of-type(4) {
-            @media (max-width: 1400px) {
-                grid-column: 1 / 2;
-                grid-row: 3 / 3;   
-            }
-            
-            @media (max-width: 900px) {
-                grid-column: 2 / 3;
-                grid-row: 3 / 4;
-            }
+                @media (max-width: 900px) {
+                    grid-column: 1 / 2;
+                    grid-row: 3 / 4;
+                }
 
-            @media (max-width: 500px) {
-                grid-column: 1 / 3;
-                grid-row: 5 / 7;
-            }
-        }
-
-        img:nth-of-type(5) {
-            @media (max-width: 1400px) {
-                grid-column: 2 / 3;
-                grid-row: 3 / 3;   
-            }
-            
-            @media (max-width: 900px) {
-                grid-column: 1 / 2;
-                grid-row: 4 / 4;
+                @media (max-width: 500px) {
+                    grid-column: 1 / 3;
+                    grid-row: 4 / 7;
+                }
             }
 
-            @media (max-width: 500px) {
-                grid-column: 1 / 3;
-                grid-row: 6 / 7;
-            }
-        }
+            &:nth-of-type(4) {
+                @media (max-width: 1400px) {
+                    grid-column: 1 / 2;
+                    grid-row: 3 / 3;   
+                }
 
+                @media (max-width: 900px) {
+                    grid-column: 2 / 3;
+                    grid-row: 3 / 4;
+                }
+
+                @media (max-width: 500px) {
+                    grid-column: 1 / 3;
+                    grid-row: 5 / 7;
+                }
+            }
+
+                &:nth-of-type(5) {
+                @media (max-width: 1400px) {
+                    grid-column: 2 / 3;
+                    grid-row: 3 / 3;   
+                }
+
+                @media (max-width: 900px) {
+                    grid-column: 1 / 2;
+                    grid-row: 4 / 4;
+                }
+
+                @media (max-width: 500px) {
+                    grid-column: 1 / 3;
+                    grid-row: 6 / 7;
+                }
+            }
+        }        
+
+        //Team description that spans 2 units.
         &--description {
             grid-column: 1 / 3;
             grid-row: 1 / 1;
@@ -155,6 +164,7 @@
             }
 
             @media (max-width: 500px) {
+                padding: 10px;
                 justify-content: center;
             }
 
@@ -167,6 +177,7 @@
             }
         }
 
+        //Small text block on end of grid. 
         &--join {
             @include flexIt(row, center, center);
             background: $white;
@@ -177,6 +188,7 @@
             padding: 50px;
             text-align: center;
             transition: all 0.3s ease-out;
+            
             @media(max-width: 1400px) {
                 grid-column: 3 / 4;
                 grid-row: 3 / 3;
@@ -193,6 +205,7 @@
                 grid-row: 7 / 7;
             }
 
+            //Little hover animation. 
             &:hover {
                 background: $black;
                 color: $offWhite;
