--- a/styles/sass/components/_form.scss
+++ b/styles/sass/components/_form.scss
@@ -88,3 +88,9 @@
         }
     }
 }
+
+.comment__button {
+    @media (max-width: 900px) {
+        @include flexIt(row, center, center)
+    }
+}   
