--- a/styles/style.css
+++ b/styles/style.css
@@ -667,6 +667,24 @@ a {
   text-transform: uppercase;
   padding-bottom: 5px;
 }
+@media (max-width: 900px) {
+  .comment__button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .branding::before {
   content: "";
   position: absolute;
