--- a/styles/sass/components/_form.scss
+++ b/styles/sass/components/_form.scss
@@ -1,5 +1,5 @@
 //Parent section. 
-#comment__form {
+.form {
     padding: 200px 0;
 
     h2 {
@@ -41,7 +41,7 @@
         border-bottom: 2px solid $black;
     }
 
-    &--email {
+    &__email {
         @media (max-width: 900px) {
             margin: 40px 0;
         }
