--- a/styles/sass/partials/home__page/_slider.scss
+++ b/styles/sass/partials/home__page/_slider.scss
@@ -51,6 +51,7 @@
     
         &--image {
             border-radius: 50%;
+            max-height: 289px;
         
             @media (max-width: 400px) {
                 width: 50%;
